Replacing SQLiteDialect with H2Dialect and changing the properties and pom

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
-spring.application.name=movie-api
-spring.datasource.url=jdbc:sqlite:movie.db
+spring.datasource.url=jdbc:sqlite:moviedb.db
 spring.datasource.driver-class-name=org.sqlite.JDBC
 spring.jpa.database-platform=org.hibernate.dialect.SQLiteDialect
+spring.jpa.properties.hibernate.dialect=com.example.movie_api.CustomH2Dialect
+
 
 tmdb.apikey=
