--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,19 @@
-spring.datasource.url=jdbc:sqlite:moviedb.db
-spring.datasource.driver-class-name=org.sqlite.JDBC
-spring.jpa.database-platform=org.hibernate.dialect.SQLiteDialect
-spring.jpa.properties.hibernate.dialect=com.example.movie_api.CustomH2Dialect
+spring.datasource.url=jdbc:h2:mem:banco
+spring.datasource.driverClassName=org.h2.Driver
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.datasource.username=admin
+spring.datasource.password=123
+spring.h2.console.path=/h2
+spring.h2.console.enabled=true
+spring.jpa.defer-datasource-initialization=true
+logging.level.org.springframework=DEBUG
+
+
+
+
+
+
+
 
 
 tmdb.apikey=
